--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Presentem els enllaços de trucada: la peça que faltava a les invitacions de calendari i reunions improvisades.
+• Ara pots crear ràpidament un enllaç perquè qualsevol persona a Signal pugui unir-se a una trucada grupal, sense necessitat d'unir-se prèviament a un xat grupal de Signal.
+• Els enllaços de trucada són reutilitzables i ideals tant per a quedades telefòniques recurrents amb la teva colla com per a les reunions setmanals amb els teus companys de feina.
+• Pots administrar els teus enllaços de trucada, controlar els ajustos per aprovar sol·licituds i copiar enllaços des de la pestanya de trucades per compartir-los ràpidament.
