--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Киньте друзям новий виклик, а точніше — посилання на виклик!
+• Тепер можна просто створити посилання на груповий виклик, щоб інший користувач Signal зміг узяти в ньому участь, навіть якщо його немає в груповому чаті.
+• Посилання на виклики багаторазові, тож вони ідеально підійдуть для регулярних розмов з друзями чи щотижневих робочих дзвінків.
+• Тепер на вкладці викликів можна керувати посиланнями, змінювати налаштування затвердження учасників і копіювати й швидко надсилати посилання на виклики.
