--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+تعرَّفوا على روابط المكالمات: الحلقة المفقودة لدعوات التقويم والاجتماعات الطارئة.
+• يُمكنك الآن إنشاء رابط بسيط بسرعة يُمكن لأي أحد في سيجنال استعماله للانضمام إلى مكالمة جماعية دون الحاجة إلى الانضمام إلى دردشة جماعية في سيجنال أولًا.
+• يمكن إعادة استخدام روابط المكالمات وهي مناسبة للقاءات الهاتفية المُتكرِّرة مع أعز أصدقائك أو المكالمات الأسبوعية مع زملائك.
+• يمكنك إدارة روابط المكالمات والتحكُّم في إعدادات القبول ونسخ روابط من علامة تبويب "المكالمات" لمشاركتها بسرعة.
