--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Představujeme odkazy na hovory: Chybějící odkaz pro pozvánky do kalendáře a improvizovaná setkání.
+• Nyní můžete rychle vytvořit jednoduchý odkaz, přes který se může každý v aplikaci Signal připojit ke skupinovému hovoru, aniž by se musel nejprve připojit ke skupinovému chatu.
+• Odkazy na hovory lze používat opakovaně a jsou ideální pro opakované telefonní schůzky s nejlepšími přáteli nebo pro týdenní kontroly s kolegy z práce.
+• Odkazy na hovory můžete spravovat, můžete kontrolovat nastavení schvalování a kopírovat odkazy z karty hovorů pro rychlé sdílení.
