--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Esittelyssä puhelulinkit: kalenterikutsuille ja spontaaneille tapaamisille.
+• Nyt voit luoda nopeasti linkin, jonka avulla kuka tahansa Signalissa voi liittyä ryhmäpuheluun liittymättä ensin Signal-ryhmäkeskusteluun.
+• Puhelulinkkejä voi käyttää uudelleen, joten ne sopivat toistuviin puhelintreffeihin ystävien kanssa tai viikoittaisiin työkeskusteluihin.
+• Voit hallita puhelulinkkejä, hyväksymisasetuksia sekä kopioida nopeasti jaettavia linkkejä puhelut-välilehdeltä.
