--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Vous en rêviez, Signal l'a fait : avec les liens d'appel, tisser des liens privilégiés avec vos amis et collègues devient simple comme bonjour. 
+• Créez un lien d'appel en deux temps, trois mouvements et partagez-le. Les utilisateurs de Signal peuvent ainsi participer à l'appel de groupe directement, sans avoir à rejoindre une conversation de groupe.
+• Les liens d'appel sont réutilisables. Pratique, quand on ne peut pas se passer d'appeler ses amis tous les jours ou qu'on a des réunions hebdomadaires avec ses collègues.
+• Vous gardez le contrôle : vous pouvez gérer vos liens d'appel, les copier depuis l'onglet "Appels" pour les partager rapidement ou encore décider des paramètres d'approbation.
