--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+पेश है कॉल लिंक: कैलेंडर इनवाइट और तुरंत होने वाली सभाओं के लिए ज़रूरी लिंक।
+• अब आप जल्दी से एक आसान लिंक बना सकते हैं, जो किसी ग्रुप कॉल से जुड़ने के लिए कोई भी इस्तेमाल कर सकता है, लेकिन उसे पहले Signal की ग्रुप चैट से जुड़ने की ज़रूरत नहीं होगी।
+• कॉल लिंक को बार-बार इस्तेमाल किया जा सकता है और अपने दोस्तों के साथ अक्सर होने वाली फ़ोन डेट या अपने साथ काम करने वाले लोगों के साथ हर हफ़्ते होने वाले चेक-इन के लिए ये सबसे बढ़िया रहते हैं।
+• आप अपने कॉल लिंक प्रबंधित कर सकते हैं, मंज़ूरी की सेटिंग्स नियंत्रित कर सकते हैं, और तुरंत शेयर करने के लिए कॉल्स टैब से लिंक कॉपी कर सकते हैं।
