--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Bemutatkozik a „Híváslinkek” funkció: a hiányzó link a naptármeghívókhoz és a rögtönzött összejövetelekhez.
+• Mostantól gyorsan létrehozhatsz egy egyszerű linket, amellyel a Signal felhasználói csoportos híváshoz csatlakozhatnak anélkül, hogy először csatlakozniuk kellene egy csoportos Signal csevegéshez.
+• A híváslinkek újrafelhasználhatók, és ideálisak a legjobb barátaiddal való ismétlődő telefonrandikhoz vagy a munkatársaiddal való heti megbeszélésekhez.
+• A gyors megosztás érdekében kezelheted a híváslinkeket, szabályozhatod a jóváhagyási beállításokat, és a hívások lapról másolhatod a hivatkozásokat.
