--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Arrivano i link chiamata su Signal: il collegamento perfetto per ogni tipo di chiamata, da quelle già in calendario alle last minute.
+• Da ora puoi creare velocemente un link che chiunque su Signal può usare per unirsi a una chiamata (senza dover far parte di una chat di gruppo).
+• I link chiamata possono essere utilizzati più volte: dallo stesso link puoi avviare la chiamata in occasioni diverse, senza doverne creare uno nuovo ogni volta.
+• Puoi gestire i tuoi link chiamata, modificare le impostazioni per l'approvazione degli ingressi e copiare i link dalla schermata delle chiamate per condividerli più facilmente.
