--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+일정 초대와 즉석 모임을 위한 링크 '통화 링크'를 소개합니다.
+• 이제 Signal 그룹 대화에 먼저 참여하지 않고서도 Signal 사용자라면 누구나 그룹 통화에 참여할 수 있는 간편한 링크를 빠르게 만들 수 있습니다.
+• 통화 링크는 다시 사용할 수 있으며, 친구와의 통화나 직장 동료와의 주간 미팅 등 반복되는 통화 일정에 사용하기 좋습니다.
+• 통화 탭에서 통화 링크를 관리하고, 승인 설정을 제어하고, 링크를 복사하여 빠르게 공유할 수 있습니다.
