--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Îți prezentăm Linkurile apelurilor: veriga lipsă din invitațiile din calendar și din întâlnirile de ultim moment.
+• Acum poți crea rapid un link simplu pe care oricine de pe Signal îl poate folosi pentru a se alătura unui apel de grup fără a fi nevoie să se alăture mai întâi la o conversație de grup Signal.
+• Linkurile apelurilor sunt reutilizabile și ideale pentru întâlniri telefonice recurente cu cei mai buni prieteni ai tăi sau pentru check-in-uri săptămânale cu colegii tăi.
+• Poți să gestionezi linkurile apelurilor tale, să controlezi setările de aprobare și să copiezi linkurile, din fila Apeluri pentru partajare rapidă.
