--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+ขอแนะนำฟีเจอร์ลิงก์การโทร: ไม่ว่าเรื่องงานหรือเรื่องเล่น ก็พร้อมเติมเต็มการพูดคุยของคุณให้สะดวกยิ่งกว่า บอกลาข้อจำกัดเดิมๆ ไปได้เลย
+• สร้างลิงก์ได้ง่ายๆ แล้วให้ผู้ใช้ Signal คนอื่นๆ เข้าร่วมการโทรกลุ่มได้ทันทีโดยที่ไม่ต้องเป็นสมาชิกของแชทกลุ่ม Signal ก็ได้
+• สามารถใช้ลิงก์การโทรเดิมได้เรื่อยๆ จึงตอบโจทย์การโทรที่คุณต้องใช้เป็นประจำ ไม่ว่าจะเป็นการนัดเมาท์กับแก๊งเพื่อนหรือคุยอัปเดตงานประจำสัปดาห์กับที่บริษัท
+• จัดการลิงก์การโทรที่คุณสร้างได้อย่างเต็มที่ นอกจากนี้ยังสามารถเลือกตั้งค่าเพื่ออนุมัติผู้เข้าร่วม รวมถึงคัดลอกลิงก์จากแท็บการโทรแล้วแชร์ได้แบบทันใจ
