--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,4 +1,4 @@
-Introducing Call Links: The missing link for calendar invites and impromptu gatherings.
-• Now you can quickly create an easy link that anyone on Signal can use to join a group call without having to join a Signal group chat first.
-• Call links are reusable and ideal for recurring phone dates with your best friends or weekly check-ins with your coworkers.
-• You can manage your call links, control approval settings, and copy links from the calls tab for quick sharing.
+Arama Bağlantıları Tanıtımı: Takvim davetleri ve doğaçlama toplantılar için eksik olan bağlantı.
+• Bundan böyle Signal'deki herkesin önce bir Signal grup sohbetine katılmak zorunda kalmadan, grup aramasına katılmak için kullanabileceği kolay bir bağlantıyı hızla oluşturabilirsin.
+• Arama bağlantıları yeniden kullanılabilir ve en iyi arkadaşlarınla sürekli yaptığın telefon görüşmeleri veya iş arkadaşlarınla haftalık buluşmalar için idealdir.
+• Arama bağlantılarını yönetebilir, onay ayarlarını kontrol edebilir ve hızlı paylaşım için bağlantıları aramalar sekmesinden kopyalayabilirsin.
